Refactor project structure and update styling in index.html

--- a/index.html
+++ b/index.html
@@ -6,54 +6,162 @@
     <title>PyCalc - Simplifying Calculations</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Poppins', sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f4f4f4;
+            background-color: #f0f0f0;
+            color: #333;
         }
+
+        /* Intro Section */
         header {
-            background-color: #4CAF50;
+            background-image: url('####'); /* ضع هنا صورة الغلاف */
+            background-size: cover;
+            background-position: center;
+            height: 100vh;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
             color: white;
-            padding: 20px;
             text-align: center;
         }
+
         header h1 {
+            font-size: 60px;
             margin: 0;
         }
-        nav {
-            margin: 20px;
-            text-align: center;
+
+        header p {
+            font-size: 24px;
+            margin: 10px 0;
         }
-        nav a {
-            margin: 0 15px;
-            text-decoration: none;
-            color: #333;
+
+        header button {
+            background-color: #4CAF50;
+            border: none;
+            padding: 15px 30px;
+            color: white;
             font-size: 18px;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
         }
-        .section {
-            padding: 40px;
+
+        header button:hover {
+            background-color: #45a049;
+        }
+
+        nav {
+            position: absolute;
+            top: 20px;
+            right: 20px;
+        }
+
+        nav a {
+            color: white;
+            text-decoration: none;
+            margin-left: 20px;
+            font-size: 18px;
+            transition: color 0.3s ease;
+        }
+
+        nav a:hover {
+            color: #ddd;
+        }
+
+        /* Feature Section */
+        .features {
+            background-color: white;
+            padding: 80px 20px;
             text-align: center;
         }
-        .section h2 {
-            margin-bottom: 20px;
+
+        .features h2 {
+            font-size: 40px;
+            margin-bottom: 50px;
+            color: #4CAF50;
         }
-        .features {
+
+        .feature-list {
             display: flex;
             justify-content: space-around;
+            flex-wrap: wrap;
         }
+
         .feature {
+            background-color: #f9f9f9;
             width: 30%;
+            margin: 20px;
+            border-radius: 10px;
+            padding: 20px;
+            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
         }
+
         .feature img {
             width: 100%;
-            height: 200px;
-            background-color: #ddd;
+            border-radius: 10px;
         }
+
+        .feature h3 {
+            margin: 20px 0;
+        }
+
+        /* About Section */
+        .about {
+            padding: 80px 20px;
+            background-color: #f4f4f4;
+            text-align: center;
+        }
+
+        .about h2 {
+            font-size: 40px;
+            margin-bottom: 30px;
+        }
+
+        .about p {
+            font-size: 18px;
+            max-width: 800px;
+            margin: 0 auto;
+            margin-bottom: 30px;
+            line-height: 1.6;
+        }
+
+        .social-links a {
+            margin: 0 10px;
+            font-size: 20px;
+            text-decoration: none;
+            color: #4CAF50;
+            transition: color 0.3s ease;
+        }
+
+        .social-links a:hover {
+            color: #333;
+        }
+
         footer {
             background-color: #333;
             color: white;
+            padding: 30px;
             text-align: center;
-            padding: 20px;
+        }
+
+        footer p {
+            margin: 0;
+        }
+
+        /* Media Queries */
+        @media (max-width: 768px) {
+            .feature {
+                width: 80%;
+            }
+
+            header h1 {
+                font-size: 40px;
+            }
+
+            header p {
+                font-size: 18px;
+            }
         }
     </style>
 </head>
@@ -62,50 +170,70 @@
 <header>
     <h1>PyCalc</h1>
     <p>Simplifying Calculations for Everyone</p>
+    <button onclick="location.href='###DeployedProjectLink###';">Try PyCalc Now</button>
     <nav>
         <a href="#features">Features</a>
         <a href="#about">About</a>
     </nav>
-    <button onclick="location.href='###DeployedProjectLink###';">Try PyCalc Now</button>
 </header>
 
-<section class="section" id="features">
+<section class="features" id="features">
     <h2>Key Features</h2>
-    <div class="features">
+    <div class="feature-list">
         <div class="feature">
-            <h3>Feature 1</h3>
             <img src="####" alt="Feature 1 Image">
-            <p>This feature allows you to perform complex calculations easily.</p>
+            <h3>Feature 1: Complex Calculations</h3>
+            <p>This feature allows you to perform complex calculations easily and quickly.</p>
         </div>
         <div class="feature">
-            <h3>Feature 2</h3>
             <img src="####" alt="Feature 2 Image">
-            <p>This feature supports multiple mathematical operations and formulas.</p>
+            <h3>Feature 2: Multiple Operations</h3>
+            <p>Supports a variety of mathematical operations and formulas for flexible use.</p>
         </div>
         <div class="feature">
-            <h3>Feature 3</h3>
             <img src="####" alt="Feature 3 Image">
-            <p>Provides detailed step-by-step results for educational purposes.</p>
+            <h3>Feature 3: Educational Mode</h3>
+            <p>Provides step-by-step explanations for learners and educators.</p>
         </div>
     </div>
 </section>
 
-<section class="section" id="about">
+<section class="about" id="about">
     <h2>About PyCalc</h2>
-    <p>PyCalc was inspired by the need to simplify and automate complex calculations for users who want a simple, easy-to-use calculator.</p>
-    <p>We started development in [Month, Year] and have worked tirelessly to bring this project to life as part of our Portfolio Project for Holberton School.</p>
-    <p>Meet the team:</p>
-    <ul>
-        <li><a href="####">LinkedIn</a></li>
-        <li><a href="####">GitHub</a></li>
-        <li><a href="####">Twitter</a></li>
-    </ul>
-    <p>Check out the GitHub repository: <a href="####">PyCalc Repository</a></p>
+    <p>PyCalc was inspired by the need for an easy-to-use tool that simplifies complex mathematical calculations for professionals and students alike. Development began in [Month, Year] as part of our Holberton School Portfolio Project.</p>
+    <p>Connect with the team:</p>
+    <div class="social-links">
+        <a href="####">LinkedIn</a>
+        <a href="####">GitHub</a>
+        <a href="####">Twitter</a>
+    </div>
+    <p>Project Repository: <a href="####">GitHub</a></p>
 </section>
 
 <footer>
-    <p>&copy; 2024 PyCalc - All Rights Reserved</p>
+    <p>&copy; 2024 PyCalc. All rights reserved.</p>
 </footer>
+
+<script>
+    // Add scroll effect to navigation
+    document.querySelectorAll('nav a').forEach(anchor => {
+        anchor.addEventListener('click', function(e) {
+            e.preventDefault();
+            document.querySelector(this.getAttribute('href')).scrollIntoView({
+                behavior: 'smooth'
+            });
+        });
+    });
+
+    // Add fade-in effect on page load
+    window.addEventListener('load', function() {
+        document.body.style.opacity = 0;
+        setTimeout(() => {
+            document.body.style.transition = 'opacity 1.5s';
+            document.body.style.opacity = 1;
+        }, 100);
+    });
+</script>
 
 </body>
 </html>
