Refactor project structure and update background image URL in index.html

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
         /* Intro Section */
         header {
-            background-image: url('####'); /* ضع هنا صورة الغلاف */
+            background-image: url('https://plus.unsplash.com/premium_photo-1661663603858-2df08fe3d65d?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D'); /* ضع هنا صورة الغلاف */
             background-size: cover;
             background-position: center;
             height: 100vh;
