Refactor project structure and add Holberton School link in index.html

--- a/index.html
+++ b/index.html
@@ -203,6 +203,7 @@
     <p>PyCalc was inspired by the need for an easy-to-use tool that simplifies complex mathematical calculations for professionals and students alike. Development began in [Month, Year] as part of our Holberton School Portfolio Project.</p>
     <p>Connect with the team:</p>
     <div class="social-links">
+        <a href="https://www.holbertonschool.com/">Holberton School</a>
         <a href="https://www.linkedin.com/in/ahmed-adel-513207253/">LinkedIn</a>
         <a href="https://github.com/Ahmedadel200066">GitHub</a>
         <a href="https://x.com/narutoadel2011">Twitter</a>
